--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,9 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": ">=5.6.4",
+        "php": ">=7.1.0",
         "laravel/lumen-framework": "5.4.*",
+        "fzaninotto/faker": "~1.4",
         "vlucas/phpdotenv": "~2.2"
     },
     "require-dev": {
