fix bucketeer credential issue

--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "fzaninotto/faker": "~1.4",
         "phpunit/phpunit": "~5.0",
         "mockery/mockery": "~0.9",
-        "flipbox/lumen-generator": "^5.4"
+        "flipbox/lumen-generator": "^5.4",
+        "codeception/codeception": "^2.5"
     },
     "autoload": {
         "psr-4": {
