--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "laravel/lumen-framework": "5.4.*",
         "fzaninotto/faker": "~1.4",
         "vlucas/phpdotenv": "~2.2",
-		"aws/aws-sdk-php-laravel": "~3.0"
+		"aws/aws-sdk-php-laravel": "~3.0",
+        "sentry/sentry-laravel": "^0.11.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
