--- a/codeception.yml
+++ b/codeception.yml
@@ -9,9 +9,10 @@ settings:
     colors: true
     memory_limit: 1024M
 modules:
-    config:
         Db:
             dsn: ''
             user: ''
             password: ''
             dump: tests/_data/dump.sql
+params:
+    - .env.testing
