--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3"
 
 services:
-  php:
+  apache_php:
     image: markoshust/lumen-php-apache:7.2-0
     build: .
     volumes:
@@ -10,14 +10,15 @@ services:
       - ./conf/default-ssl.conf:/etc/apache2/sites-available/default-ssl.conf
       - ./conf/ssl:/etc/apache2/ssl
     links:
-      - db
+      - db 
     ports:
       - 8080:80
       - 443:443
   db:
     image: mysql:5.6
+    environment:
+      MYSQL_ROOT_PASSWORD: 1234
     volumes:
-     - /Applications/MAMP/db/mysql56:/var/lib/mysql
-    restart: always
+     - ./mysql-data:/docker-entrypoint-initdb.d
     ports:
-      - "3306:3306"
+     - 3306:3306
