--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,11 +26,9 @@ jobs: # a collection of steps
       - checkout # special step to check out source code to working directory
       - run: a2enmod rewrite 
       - run: docker-php-ext-install mysqli pdo_mysql
-      #- run: apt-get -y install mysql-client --allow-unauthenticated
-      #- run: mysql -h 127.0.0.1 -u root --protocol=tcp
       - run:
           name: Install Project Dependencies
-          command: composer install
+          command: composer install -n --prefer-dist
       - restore_cache: # special step to restore the dependency cache if `composer.lock` does not change
           keys:
             - composer-v1-{{ checksum "composer.lock" }}
@@ -40,12 +38,8 @@ jobs: # a collection of steps
           key: composer-v1-{{ checksum "composer.lock" }}
           paths:
             - vendor
-      #- run: touch storage/testing.sqlite 
-      #- run: php artisan migrate --env=testing --database=sqlite_testing --force
       - run: php artisan migrate:refresh --force
       - run: php artisan db:seed
       
       - run: ./vendor/bin/codecept run
-      #- run: ./vendor/bin/codecept build
-      #- run: ./vendor/bin/codecept run
       # See https://circleci.com/docs/2.0/deployment-integrations/ for deploy examples    
