--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,8 +1,7 @@
 exclude: '^$'
 fail_fast: false
 repos:
-  - repo: git@github.com:SFDigitalServices/webform.git
-    rev: 940643b
+  - repo: local
     hooks:
       - id: forbid-binary
       - id: forbid-space-in-indent
