--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,12 +1,11 @@
 exclude: '^$'
 fail_fast: false
 repos:
-  - repo: local
+  - repo: local # If your hooks are created locally
     hooks:
-      - id: forbid-binary
-      - id: forbid-space-in-indent
+  - repo: https://github.com/jumanjihouse/pre-commit-hooks
+    sha: 1.11.0
+    hooks:
       - id: git-check  # Configure in .gitattributes
       - id: git-dirty  # Configure in .gitignore
-      - id: markdownlint # Configure in .mdlrc
       - id: shellcheck
-      - id: shfmt
