--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -1,3 +1,6 @@
+# This file tells https://pre-commit.com/ which hooks are provided by this repo
+# for use by other git repos. This is also for your local repo, your hooks
+# should be in the folder pre_commit_hooks.
 -   id: validate_manifest
     name: Validate Pre-Commit Manifest
     description: This validator validates a pre-commit hooks manifest file
