--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,8 +25,8 @@ jobs: # a collection of steps
     steps: # a set of executable commands
       - checkout # special step to check out source code to working directory
       - run:
-          name: Run pre-commit on changed files
-          command: git diff-tree --no-commit-id --name-only -r $REVISION | xargs pre-commit run --files # runs
+          name: Run precommit
+          command: git diff-tree --no-commit-id --name-only -r $REVISION | xargs pre-commit run --files
       - run: a2enmod rewrite 
       - run: docker-php-ext-install mysqli pdo_mysql
       - run:
