--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,3 +9,7 @@ repos:
       - id: git-check  # Configure in .gitattributes
       - id: git-dirty  # Configure in .gitignore
       - id: shellcheck
+  - repo: git@github.com:hootsuite/pre-commit-php.git
+    sha: 1.1.0
+    hooks:
+      - id: php-lint-all
