--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,15 +1,21 @@
 exclude: '^$'
 fail_fast: false
 repos:
-  - repo: local # If your hooks are created locally
-    hooks:
   - repo: https://github.com/jumanjihouse/pre-commit-hooks
-    sha: 1.11.0
+    rev: 1.11.0
     hooks:
-      - id: git-check  # Configure in .gitattributes
-      - id: git-dirty  # Configure in .gitignore
-      - id: shellcheck
-  - repo: git@github.com:hootsuite/pre-commit-php.git
-    sha: 1.1.0
+      - id: shellcheck #need shellcheck: brew install shellcheck
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v2.1.0  # Use the ref you want to point at
     hooks:
-      - id: php-lint-all
+      - id: trailing-whitespace
+      - id: check-added-large-files
+      - id: check-merge-conflict
+      - id: check-symlinks
+      - id: detect-private-key
+  # php linter, will need a local install to run the hooks
+  # get it from https://github.com/squizlabs/PHP_CodeSniffer
+  - repo: https://github.com/digitalpulp/pre-commit-php.git
+    sha: 1.3.0
+    hooks:
+      - id: php-lint
