--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2 # use CircleCI 2.0
 
 jobs: # a collection of steps
   build: # runs not using Workflows must have a `build` job as entry point
-    docker: # run the steps with Docker 
+    docker: # run the steps with Docker
       - image: markoshust/lumen-php-apache:7.2-0 # ...with this image as the primary container; this is where all `steps` will run
         environment:
           APP_ENV: testing
@@ -24,11 +24,11 @@ jobs: # a collection of steps
     working_directory: ~/project # directory where steps will run
     steps: # a set of executable commands
       - checkout # special step to check out source code to working directory
-      - run: a2enmod rewrite 
+      - run: a2enmod rewrite
       - run: docker-php-ext-install mysqli pdo_mysql
       - run:
           name: Install Project Dependencies
-          command: composer install -n --prefer-dist
+          command: composer dumpautoload | composer install -n --prefer-dist
       - restore_cache: # special step to restore the dependency cache if `composer.lock` does not change
           keys:
             - composer-v1-{{ checksum "composer.lock" }}
@@ -40,6 +40,6 @@ jobs: # a collection of steps
             - vendor
       - run: php artisan migrate:refresh --force
       - run: php artisan db:seed
-      
+
       - run: ./vendor/bin/codecept run
-      # See https://circleci.com/docs/2.0/deployment-integrations/ for deploy examples    
+      # See https://circleci.com/docs/2.0/deployment-integrations/ for deploy examples
