--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,9 @@
         "laravel/lumen-framework": "5.4.*",
         "fzaninotto/faker": "~1.4",
         "vlucas/phpdotenv": "~2.2",
-		"aws/aws-sdk-php-laravel": "~3.0",
-        "sentry/sentry-laravel": "^0.11.0"
+	"aws/aws-sdk-php-laravel": "~3.0",
+        "sentry/sentry-laravel": "^0.11.0",
+        "doctrine/dbal": "^2.9"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
