--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -21,7 +21,7 @@ repos:
       - id: php-lint
       - id: php-cs
         files: \.(php)$
-        args: [--standard=PSR2 -p]
+        args: [--standard=PSR1 -p]
       - id: php-cs-fixer
         files: \.(php)$
-        args: [--level=PSR2]
+        args: [--rules=@PSR2]
