--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2 # use CircleCI 2.0
 jobs: # a collection of steps
   build: # runs not using Workflows must have a `build` job as entry point
     docker: # run the steps with Docker
-      - image: markoshust/lumen-php-apache:7.2-0 # ...with this image as the primary container; this is where all `steps` will run
+      - image: circleci/php:7.2-apache-browsers # ...with this image as the primary container; this is where all `steps` will run
         environment:
           APP_ENV: testing
           APP_DEBUG: true
@@ -45,4 +45,14 @@ jobs: # a collection of steps
       - run: php artisan db:seed
 
       - run: ./vendor/bin/codecept run
+      - run:
+          name: Install nodejs which is needed by codeceptjs
+          command: apt-get update -yq && apt-get install curl gnupg -yq && curl -sL https://deb.nodesource.com/setup_8.x | bash && apt-get install nodejs wget -yq
+      - run:
+          name: Install chromium which is needed by codeceptjs
+          command: wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key add - && sh -c 'echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google.list' && apt-get update && apt-get install -y google-chrome-unstable fonts-ipafont-gothic fonts-wqy-zenhei fonts-thai-tlwg fonts-kacst ttf-freefont --no-install-recommends && rm -rf /var/lib/apt/lists/*
+      - run:
+          name: Install puppeteer
+          command: cd tests/frontend | npm install codeceptjs puppeteer
+      - run: cd tests/frontend | npx codeceptjs run
       # See https://circleci.com/docs/2.0/deployment-integrations/ for deploy examples
