--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,6 +21,7 @@ jobs: # a collection of steps
           MYSQL_ALLOW_EMPTY_PASSWORD: yes
           MYSQL_ROOT_PASSWORD: '1234'
           MYSQL_DATABASE: webform
+      - image: circleci/node:latest-browsers
     working_directory: ~/project # directory where steps will run
     steps: # a set of executable commands
       - checkout # special step to check out source code to working directory
@@ -45,12 +46,6 @@ jobs: # a collection of steps
       - run: php artisan db:seed
 
       - run: ./vendor/bin/codecept run
-      - run:
-          name: Install nodejs which is needed by codeceptjs
-          command: apt-get update -yq && apt-get install curl gnupg -yq && curl -sL https://deb.nodesource.com/setup_8.x | bash && apt-get install nodejs wget -yq
-      - run:
-          name: Install chromium which is needed by codeceptjs
-          command: wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key add - && sh -c 'echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google.list' && apt-get update && apt-get install -y google-chrome-unstable fonts-ipafont-gothic fonts-wqy-zenhei fonts-thai-tlwg fonts-kacst ttf-freefont --no-install-recommends && rm -rf /var/lib/apt/lists/*
       - run:
           name: Install puppeteer
           command: cd tests/frontend | npm install codeceptjs puppeteer
