use circleci node image

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,15 +29,16 @@ jobs: # a collection of steps
       - run:
           name: Install Project Dependencies
           command: sudo composer install -n --prefer-dist
-      - save_cache: # special step to save the dependency cache with the `composer.lock` cache key template
-          key: composer-v1-{{ checksum "composer.lock" }}
-          paths:
-            - vendor
+      - run: sudo chmod -R 777 ~/project # change permission for restore cache
       - restore_cache: # special step to restore the dependency cache if `composer.lock` does not change
           keys:
             - composer-v1-{{ checksum "composer.lock" }}
             # fallback to using the latest cache if no exact match is found (See https://circleci.com/docs/2.0/caching/)
             - composer-v1-
+      - save_cache: # special step to save the dependency cache with the `composer.lock` cache key template
+          key: composer-v1-{{ checksum "composer.lock" }}
+          paths:
+            - vendor
       - run:
           name: Update Missed Dependencies
           command: sudo composer update
