--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,7 @@ jobs: # a collection of steps
           MYSQL_ALLOW_EMPTY_PASSWORD: yes
           MYSQL_ROOT_PASSWORD: '1234'
           MYSQL_DATABASE: webform
-    working_directory: ~/project # directory where steps will run
+    working_directory: /home/circleci/project # directory where steps will run
     steps: # a set of executable commands
       - checkout # special step to check out source code to working directory
       - run: sudo a2enmod rewrite
@@ -29,7 +29,6 @@ jobs: # a collection of steps
       - run:
           name: Install Project Dependencies
           command: sudo composer install -n --prefer-dist
-      - run: sudo chmod -R 777 ~/project # change permission for restore cache
       - restore_cache: # special step to restore the dependency cache if `composer.lock` does not change
           keys:
             - composer-v1-{{ checksum "composer.lock" }}
