--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,7 +28,7 @@ jobs: # a collection of steps
       - run: sudo docker-php-ext-install mysqli pdo_mysql
       - run:
           name: Install Project Dependencies
-          command: sudo composer install -n --prefer-dist
+          command: composer install -n --prefer-dist
       - restore_cache: # special step to restore the dependency cache if `composer.lock` does not change
           keys:
             - composer-v1-{{ checksum "composer.lock" }}
@@ -40,7 +40,7 @@ jobs: # a collection of steps
             - vendor
       - run:
           name: Update Missed Dependencies
-          command: sudo composer update
+          command: composer update
       - run: sudo php artisan migrate:refresh --force
       - run: sudo php artisan db:seed
 
