--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,10 +50,8 @@ jobs: # a collection of steps
       - run:
           name: Install puppeteer
           command: cd tests/frontend | npm install codeceptjs puppeteer
-       - run:
+      - run:
           name: Configure & start Apache
-          command: |
-            sudo cp /home/circleci/project/docker/conf/000-default.conf /etc/apache2/sites-available/000-default.conf
-            sudo service apache2 start
+          command: sudo cp /home/circleci/project/docker/conf/000-default.conf /etc/apache2/sites-available/000-default.conf | sudo service apache2 start
       - run: cd tests/frontend | npx codeceptjs run
       # See https://circleci.com/docs/2.0/deployment-integrations/ for deploy examples
