--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,14 +45,16 @@ jobs: # a collection of steps
       - run: php artisan db:seed
       - run: ./vendor/bin/codecept run
       - run:
-          name: install node and npm
+          name: install nvm
           command: curl -o- https://raw.githubusercontent.com/creationix/nvm/v0.33.11/install.sh | bash
-      - run: source ~/.bashrc &&  nvm install node
+      - run:
+          name: install node and npm
+          command: source ~/.bashrc &&  nvm install node
       - run:
           name: Install puppeteer
           command: cd tests/frontend | npm install codeceptjs puppeteer
       - run:
           name: Configure & start Apache
-          command: sudo cp /home/circleci/project/docker/conf/000-default.conf /etc/apache2/sites-available/000-default.conf | sudo service apache2 start
+          command: sudo cp /home/circleci/project/docker/conf/circleci-default.conf /etc/apache2/sites-available/circleci-default.conf && sudo a2ensite circleci-default && sudo service apache2 start
       - run: cd tests/frontend | npx codeceptjs run
       # See https://circleci.com/docs/2.0/deployment-integrations/ for deploy examples
