--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,7 +49,8 @@ jobs: # a collection of steps
           command: curl -o- https://raw.githubusercontent.com/creationix/nvm/v0.33.11/install.sh | bash
       - run:
           name: install node and npm
-          command: source ~/.bashrc &&  nvm install node
+          command: source ~/.bashrc
+      - run: nvm install node
       - run:
           name: Install puppeteer
           command: cd tests/frontend | npm install codeceptjs puppeteer
