--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,7 +49,16 @@ jobs: # a collection of steps
           command: curl -o- https://raw.githubusercontent.com/creationix/nvm/v0.33.11/install.sh | bash
       - run:
           name: activate nvm
-          command: export NVM_DIR="$HOME/.nvm" && [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh" && [ -s "$NVM_DIR/bash_completion" ] && \. "$NVM_DIR/bash_completion"
+          command: |
+            # Activate nvm
+            export NVM_DIR=$HOME/.nvm
+            touch $HOME/.nvmrc
+            source $NVM_DIR/nvm.sh
+            # Use node 8.9
+            nvm install 8.9 && nvm alias default 8.9
+            echo 8.9 > $HOME/.nvmrc
+            # Enable nvm in following steps
+            echo '[ -s "$HOME/.bashrc" ] && \. "$HOME/.bashrc"' >> $HOME/.bash_profile
       - run: nvm install node
       - run:
           name: Install puppeteer
