--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -64,5 +64,5 @@ jobs: # a collection of steps
       - run:
           name: Configure & start Apache
           command: sudo cp /home/circleci/project/docker/conf/circleci-default.conf /etc/apache2/sites-available/000-default.conf && sudo service apache2 start
-      - run: cd tests/frontend && $NPX_HOME/npx codeceptjs run
+      - run: cd tests/frontend && $HOME/.nvm/versions/node/v11.0.0/bin/npx codeceptjs run
       # See https://circleci.com/docs/2.0/deployment-integrations/ for deploy examples
