--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,6 +45,10 @@ jobs: # a collection of steps
       - run: php artisan db:seed
       - run: ./vendor/bin/codecept run
       - run:
+          name: Configure & start Apache
+          command: sudo cp /home/circleci/project/docker/conf/circleci-default.conf /etc/apache2/sites-available/000-default.conf && sudo service apache2 start
+      # end to end testing
+      - run:
           name: install nvm
           command: curl -o- https://raw.githubusercontent.com/creationix/nvm/v0.33.11/install.sh | bash
       - run:
@@ -61,8 +65,6 @@ jobs: # a collection of steps
             echo '[ -s "$HOME/.bashrc" ] && \. "$HOME/.bashrc"' >> $HOME/.bash_profile
             npm install codeceptjs puppeteer
             export NPX_HOME=$HOME/.nvm/versions/node/v11.0.0/bin
-      - run:
-          name: Configure & start Apache
-          command: sudo cp /home/circleci/project/docker/conf/circleci-default.conf /etc/apache2/sites-available/000-default.conf && sudo service apache2 start
-      - run: cd tests/frontend && $HOME/.nvm/versions/node/v11.0.0/bin/npx codeceptjs run
+            cd tests/frontend
+            $HOME/.nvm/versions/node/v11.0.0/bin/npx codeceptjs run
       # See https://circleci.com/docs/2.0/deployment-integrations/ for deploy examples
