update apache config for circleci

--- a/docker/conf/circleci-default.conf
+++ b/docker/conf/circleci-default.conf
@@ -10,6 +10,18 @@
 
 	ServerAdmin webmaster@localhost
 	DocumentRoot /home/circleci/project/public
+	DirectoryIndex index.html index.json index.php
+	LogLevel notice
+
+	<FilesMatch \.php$>
+		SetHandler application/x-httpd-php
+	</FilesMatch>
+
+	<Directory /home/ubuntu/content-hub-test>
+		AllowOverride All
+		Allow from All
+		Require all granted
+	</Directory>
 
 	# Available loglevels: trace8, ..., trace1, debug, info, notice, warn,
 	# error, crit, alert, emerg.
