--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,5 +66,5 @@ jobs: # a collection of steps
             npm install codeceptjs puppeteer
             export NPX_HOME=$HOME/.nvm/versions/node/v11.0.0/bin
             cd tests/frontend
-            $HOME/.nvm/versions/node/v11.0.0/bin/npx codeceptjs run
+            sudo $HOME/.nvm/versions/node/v11.0.0/bin/npx codeceptjs run
       # See https://circleci.com/docs/2.0/deployment-integrations/ for deploy examples
