--- a/.env.example
+++ b/.env.example
@@ -1,20 +1,11 @@
-APP_ENV=local
-APP_DEBUG=true
-APP_KEY=jBr1Nnu11xSMJViHJPNr8ecNEuL4P7k1
-APP_TIMEZONE=UTC
-API_PREFIX=api
-
-LOG_CHANNEL=stack
-LOG_SLACK_WEBHOOK_URL=
-
-DB_CONNECTION=mysql
-DB_HOST=docker_db_1
-DB_PORT=3306
-DB_DATABASE=webform
-DB_USERNAME=root
-DB_PASSWORD=1234
-
-CACHE_DRIVER=file
-QUEUE_DRIVER=sync
-
-SENTRY_DSN=https://someid@sentry.io/someid
+APP_ENV: testing
+APP_DEBUG: true
+APP_KEY: kjcndjjksddwdwdw
+DB_CONNECTION: mysql
+DB_HOST: 127.0.0.1
+DB_PORT: 3306
+DB_DATABASE: webform
+DB_USERNAME: root
+DB_PASSWORD: 1234
+CACHE_DRIVER: file
+QUEUE_DRIVER: sync
