--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,7 @@ jobs: # a collection of steps
           MYSQL_ALLOW_EMPTY_PASSWORD: yes
           MYSQL_ROOT_PASSWORD: '1234'
           MYSQL_DATABASE: webform
-    working_directory: /home/circleci/project # directory where steps will run
+    working_directory: ~/project # directory where steps will run
     steps: # a set of executable commands
       - checkout # special step to check out source code to working directory
       - run: a2enmod rewrite
@@ -46,7 +46,7 @@ jobs: # a collection of steps
       - run: ./vendor/bin/codecept run
       - run:
           name: Configure & start Apache
-          command: cp /home/circleci/project/docker/conf/circleci-default.conf /etc/apache2/sites-available/000-default.conf && service apache2 start
+          command: cp ~project/docker/conf/circleci-default.conf /etc/apache2/sites-available/000-default.conf && service apache2 start
       # end to end testing
       - run:
           name: install nvm
