--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,7 +46,7 @@ jobs: # a collection of steps
       - run: ./vendor/bin/codecept run
       - run:
           name: Configure & start Apache
-          command: cp /home/circleci/project/docker/conf/circleci-default.conf /etc/apache2/sites-available/000-default.conf && service apache2 start
+          command: sudo cp /home/circleci/project/docker/conf/circleci-default.conf /etc/apache2/sites-available/000-default.conf && sudo service apache2 start
       # end to end testing
       - run:
           name: install nvm
@@ -68,5 +68,5 @@ jobs: # a collection of steps
             chmod -R 777 storage #apache needs to write to logs
             cp .env.example .env
             cd tests/frontend
-            $HOME/.nvm/versions/node/v11.0.0/bin/npx codeceptjs run
+            #$HOME/.nvm/versions/node/v11.0.0/bin/npx codeceptjs run
       # See https://circleci.com/docs/2.0/deployment-integrations/ for deploy examples
