--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -64,10 +64,11 @@ jobs: # a collection of steps
             echo 11.0.0 > $HOME/.nvmrc
             # Enable nvm in following steps
             echo '[ -s "$HOME/.bashrc" ] && \. "$HOME/.bashrc"' >> $HOME/.bash_profile
-            npm install codeceptjs puppeteer
+            npm install
             export NPX_HOME=$HOME/.nvm/versions/node/v11.0.0/bin
             chmod -R 777 storage #apache needs to write to logs
             cp .env.example .env
             cd tests/frontend
             $HOME/.nvm/versions/node/v11.0.0/bin/npx codeceptjs run
+            npm run dev # compile sass
       # See https://circleci.com/docs/2.0/deployment-integrations/ for deploy examples
