DFB-328: Organize and reformat CSS (#89)
* Remove unused styles.css

* Reformat editor.css for consistency

No content / style changes

* Reorder styles according to features, add comments

* Move .tabbable under lefthand pane header

* Explain form-wide action menu

* Incorporate changes from #85 and #87

* Convert editor.css to nested SCSS

* Incorporate stylesheet changes in #86

* Ignore compiled app.css

* Add includePaths setting to fix imports

* Use path.resolve for includePaths

* need to remove app.css from gitignore, circleci needs to push this file back to branch after build

* Trigger deployment

* Trigger deployment

* testing skip circleci build, [ci skip]

* update circleci config, remove compiled css files

* fix error in webpack mix

* Trigger deployment [ci skip]

* update circleci config

* Final test, added bunch of white spaces to editor.scss

* move scss linting before compiling

* need to update linting rules to properly format empty lines

* Trigger deployment [ci skip]

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -71,7 +71,17 @@ jobs: # a collection of steps
             cd tests/frontend
             $HOME/.nvm/versions/node/v11.0.0/bin/npx codeceptjs run
             cd ../../
+            ./node_modules/stylelint/bin/stylelint.js public/assets/sass/*.scss --fix #lint css source
             npm run dev # compile sass
             ./node_modules/stylelint/bin/stylelint.js public/assets/css/*.css --fix #lint compiled css
-            ./node_modules/stylelint/bin/stylelint.js public/assets/sass/*.scss --fix #lint css source
-      # See https://circleci.com/docs/2.0/deployment-integrations/ for deploy examples
+      - deploy:
+          name: deploy builds to ${CIRCLE_BRANCH}
+          working_directory: /home/circleci/project
+          command: |
+            git config credential.helper 'cache --timeout=120'
+            git config user.email "ds-build@sfgov.org"
+            git config user.name "Deployment Bot"
+            git add public/assets/css # we should probably script this if more files need to be deployed.
+            git commit --allow-empty -m "Trigger deployment [ci skip]"
+            # Push quietly to prevent showing the token in log
+            git push --set-upstream origin ${CIRCLE_BRANCH}
