add mail driver for unit testing

--- a/.env.example
+++ b/.env.example
@@ -9,4 +9,5 @@ DB_USERNAME=root
 DB_PASSWORD=1234
 CACHE_DRIVER=file
 QUEUE_DRIVER=sync
+MAIL_DRIVER=array
 SENTRY_DSN=https://b53658ff4ec749719da39905217d41e0@sentry.io/1366253
