--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -67,9 +67,10 @@ jobs: # a collection of steps
             export NPX_HOME=$HOME/.nvm/versions/node/v11.0.0/bin
             chmod -R 777 storage #apache needs to write to logs
             cp .env.example .env
-            ./vendor/bin/codecept run
+            ./vendor/bin/codecept run # run unit/api/functional tests
+            ./node_modules/karma/bin/karma start --single-run --browsers ChromeHeadless karma.conf.js # run jasmine
             cd tests/frontend
-            $HOME/.nvm/versions/node/v11.0.0/bin/npx codeceptjs run
+            $HOME/.nvm/versions/node/v11.0.0/bin/npx codeceptjs run #run e2e tests
             cd ../../
             ./node_modules/stylelint/bin/stylelint.js public/assets/sass/*.scss --fix #lint css source
             npm run dev # compile sass
